基于TabActivity的底部标签栏

--- a/6 group/app/src/main/res/values/strings.xml
+++ b/6 group/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">group</string>
+
+    <string name="menu_first">首页</string>
+    <string name="menu_second">分类</string>
+    <string name="menu_third">购物车</string>
 </resources>
